--- a/CV.html
+++ b/CV.html
@@ -12,7 +12,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/arash.jpg" alt="Ahmad Memari's profile picture"></td>
+      <td><img src="images/gradPic.jpg" alt="Ahmad Memari's profile picture"></td>
       <td>
         <h1>Ahmad Memari</h1>
         <p> <em>
