--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
           </li>
           <li class="nav-item"> -->
-          <a class="nav-link" active" href="cv.html"> Curriculum Vitae</a>
+          <a class="nav-link" active" href="CV.html"> Curriculum Vitae</a>
             <a class="nav-link" active" href="#"> Contact</a>
           </li>
         </ul>
