--- a/CV.html
+++ b/CV.html
@@ -32,7 +32,7 @@
 
   <p> <strong>About me: </strong><br>
     - Current Location: Montreal<br>
-    - Graduate student in Software Engineering at Concordia University<br>
+    - Recently, graduated with a master of Software Engineering from Concordia University<br>
 
     <br>- Last position: Web developer<br>
     - Company: Pascal System <br>
