--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 
 </head>
 
-<body>
+<body id="bootstrap-overrides">
 
   <section id="title">
 
     <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-info bg-custom" ">
-      <a class="navbar-brand" href="#"> AriCo</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-info bg-custom" id="navbar"">
+      <a class=" navbar-brand" href="#"> AriCo</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -35,7 +35,7 @@
 
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" active" href="#"> Home
+            <a class="nav-link" active" href="#title"> Home
             </a>
           </li>
           <!-- <li class="nav-item dropdown">
@@ -50,7 +50,7 @@
           </li>
           <li class="nav-item"> -->
           <a class="nav-link" active" href="CV.html"> Curriculum Vitae</a>
-            <a class="nav-link" active" href="#"> Contact</a>
+          <a class="nav-link" active" href="#contact"> Contact</a>
           </li>
         </ul>
       </div>
@@ -71,7 +71,7 @@
 
 
     <img class="bottom_cloud" src="images/cloud.png" alt="cloud-img">
-    <img class="mountain-img"src="images/mountain.png" alt="mountain-img">
+    <img class="mountain-img" src="images/mountain.png" alt="mountain-img">
 
   </div>
 
@@ -79,11 +79,14 @@
     <div class="profile">
       <img class="pic1" src="images/arash.jpg" alt="Ahmad-img">
       <h2>Hello.</h2>
-      <p class="about-par">Recently, I completed my master’s degree in computer software engineering at Concordia University. During my studies, I extended my knowledge in object-oriented development and design, data structure and algorithms, advanced software architecture, software design, and methodologies. I also learned advanced program practice, program and problem solving, software, comprehension, and Maintenance comprehensively.
-      <br>
-      <br>
-      As a front-end developer and the scrum master of a team of six in a course project, we designed and developed a responsive web application to serve patients and medical staff in a timely manner. I developed the front-end using HTML5 and CSS3 and integrated the back-end part developed by Node.js and linked database managed by MongoDB. I handled user sessions and built a secure and user-friendly UI. I continued updating my web development skills by joining North Forge technology exchange incubator as a volunteer front-end developer of team Future Farm to develop a platform to reduce nitrogen and phosphorus leaks to Lake Winnipeg.
-    </p>
+      <p class="about-par">Recently, I completed my master’s degree in computer software engineering at Concordia University. During my studies, I extended my knowledge in object-oriented development and design, data structure and algorithms,
+        advanced software architecture, software design, and methodologies. I also learned advanced program practice, program and problem solving, software, comprehension, and Maintenance comprehensively.
+        <br>
+        <br>
+        As a front-end developer and the scrum master of a team of six in a course project, we designed and developed a responsive web application to serve patients and medical staff in a timely manner. I developed the front-end using HTML5 and CSS3
+        and integrated the back-end part developed by Node.js and linked database managed by MongoDB. I handled user sessions and built a secure and user-friendly UI. I continued updating my web development skills by joining North Forge technology
+        exchange incubator as a volunteer front-end developer of team Future Farm to develop a platform to reduce nitrogen and phosphorus leaks to Lake Winnipeg.
+      </p>
 
     </div>
     <hr>
@@ -109,24 +112,31 @@
       </div>
     </div>
     <!-- <hr> -->
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-       <!-- <h3>Lorem ipsum dolor sit amet, non elit.</h3> -->
-      <p>Love web and coding? </p>
-      <p> Let's get in touch and talk about it!</p>
-      <img class="pic3" src="https://media.giphy.com/media/3orif4qbRS6WjGJ2zC/giphy.gif" alt="contact-me-img">
-      <br>
-      <a class="btn" href="mailto:memari.ahmad@gmail.com">CONTACT ME</a>
-    </div>
+    <section id="contact">
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <!-- <h3>Lorem ipsum dolor sit amet, non elit.</h3> -->
+        <p>Love web and coding? </p>
+        <p> Let's get in touch and talk about it!</p>
+        <img class="pic3" src="https://media.giphy.com/media/3orif4qbRS6WjGJ2zC/giphy.gif" alt="contact-me-img">
+        <br>
+        <a class="btn" href="mailto:memari.ahmad@gmail.com">CONTACT ME</a>
+      </div>
+
+
+    </section>
   </div>
 
 
   <div class="bottom-container">
 
     <a class="footer-link" href="https://www.linkedin.com/in/a-memari/">LinkedIn</a>
-     <a class="footer-link" href="https://www.facebook.com/memari.arash">facebook</a>
-    <!-- <a class="footer-link" href="https://www.appbrewery.co/">Website</a>  -->
 
+    <a class="footer-link" href="https://www.facebook.com/memari.arash">Facebook</a>
+    <!-- <a class="footer-link" href="https://www.appbrewery.co/">Website</a>  -->
+  <br>
+  <br>
+  <a class="footer-link" href="#title">Back to top</a>
 
 
     <br>
